# mini-insure

./: .gitignore  README.md  pyproject.toml
app/: Home.py  __init__.py
app/components/: __init__.py  badges.py  formatting.py  layout.py
app/pages/: 10_Solvency_II_Balance_Sheet.py  11_QRT_Reporting_Pack.py  12_Board_Risk_Report.py  1_Synthetic_Data_and_Risk_Engine.py  2_Portfolio_Overview.py  3_Pricing.py  4_Technical_Provisions.py  5_Capital_Model.py  6_Reinsurance.py  7_ALM.py  8_Experience_Analysis.py  9_Financial_Reporting.py
data/assumptions/: base.yaml  regulatory.yaml
docs/: audit_trail.md  build_record.md  user_testing_script.md
src/miniinsure/: __init__.py  alm.py  charts.py  dnb_validation.py  mcr.py  own_funds.py  pricing.py  reporting.py  risk_margin.py  standard_formula.py  utils.py
src/miniinsure/assumptions/: __init__.py  loader.py  scenario_state.py  schema.py
src/miniinsure/qrt/: __init__.py  export.py  mappings.py  (+11 more)
tests/: test_alm.py  test_app_formatting.py  test_assumptions.py  test_board_report.py  test_claim_frequency.py  test_claim_lifecycle.py  test_claim_severity.py  test_data_validation.py  test_dependency.py  test_deterministic_reserving.py  test_economic_scenarios.py  test_import_smoke.py  test_integration_end_to_end.py  test_mcr.py  test_one_year_engine.py  test_own_funds.py  test_policy_generation.py  test_pricing.py  test_qrt.py  test_regression.py  test_reinsurance.py  test_reporting.py  test_reserve_risk.py  test_risk_margin.py  test_standard_formula.py  test_technical_provisions.py  test_triangles.py  test_truth_isolation.py
(+40 files in other folders)
